Add App, Ev1 classes and update Galeria, Cuadro, Critico, Evaluacion classes for gallery management functionality