@@ -6,7 +6,7 @@ public class Galeria {
     private String ciudad;
 
     public boolean setNombre(String nombre){
-        if(nombre == null || nombre.trim().isEmpty()){ // "", "        "
+        if(nombre == null || nombre.isBlank()){ // "", "        "
             return false;
         }
         this.nombre = nombre;
